# Canvas

./: .gitignore  README.md  inference.py  info.py  model.py  pipeline.py  pyproject.toml  train.py  utils.py  val_texts.json  validation.py
