[project]
name = "context-compress"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "einops>=0.8.1",
    "matplotlib>=3.10.8",
    "torchinfo>=1.8.0",
    "transformers>=4.57.3",
    "unsloth>=2025.7.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
